# wdb-stationplacesync

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  detailed.h2m
config/mk/: debian.mk
debian/: changelog  control  copyright  rules
debian_files/: changelog  control  copyright  rules
doc/: doc.mk
doc/developer/: stationload_system-design-specification.xml  stationload_system-test-specification.xml
doc/developer/gfx/: stationload_class-diagram.dia
doc/man/: man.mk  stationLoad.xml  wdb-stationLoad.xml
etc/: etc.mk  stationload.conf  stload.cfg
src/: DBStructs.cpp  DBStructs.h  STInfosysDatabaseConnection.cpp  STInfosysDatabaseConnection.h  STLoaderConfiguration.cpp  STLoaderConfiguration.h  WDBDatabaseConnection.cpp  WDBDatabaseConnection.h  main.cpp  sources.mk
src/transactor/: addPlacePoint.h  getAllSTIStations.h  getPlaceName.h  updatePlacePoint.h  wciTransactors.h
src/transactors/: addOrUpdatePlacePoint.h  addPlacePoint.h  getAllSTIStations.h  getAllWDBStations.h  getPlaceName.h  updatePlacePoint.h  wciTransactors.h
